--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,7 +9,7 @@
 # following line after everything is running.  This will turn off
 # the tons of debug messages, and leave only INFO, WARN, ERROR, etc.
 #
-log4j.rootCategory=DEBUG, R
+log4j.rootCategory=INFO, R
 log4j.category.edu.wisc.my.webproxy=DEBUG, R
 log4j.additivity.edu.wisc.my.webproxy=false
 
