NOJIRA 	Fix up logic around persistence of cookies. Only persistent cookies are store, create and update timestamps are stored, expired cookies are purged from the database hourly, race-conditions when storing and retrieving cookies have been resolve. 	Add JMX instrumentation. The JDBC pool, hibernate stats and ehcache are all exposed via JMX for monitoring and management. 	Portlet instance keying is now done via a randomly generated portlet preference, this is a spec compliant way of tracking this information. 	HttpClient instances are now scoped to the user's session instead of the request
git-svn-id: https://source.jasig.org/portlets/WebproxyPortlet/trunk@19667 f5dbab47-78f9-eb45-b975-e544023573eb

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -12,6 +12,10 @@
 log4j.rootCategory=INFO, R
 log4j.category.edu.wisc.my.webproxy=DEBUG, R
 log4j.additivity.edu.wisc.my.webproxy=false
+log4j.logger.org.apache.http.headers=DEBUG, R
+log4j.additivity.org.apache.http.headers=false
+log4j.logger.org.hibernate=TRACE, R
+log4j.additivity.org.hibernate=false
 
 ###########################################################################
 # Setup a rolling file appender
