--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,7 @@
     metadata-complete="true"
     version="2.5">
     
-    <display-name>Authenticated Web Proxy Portlet</display-name>
+    <display-name>Web Proxy Portlet</display-name>
 	
     <context-param>
         <param-name>webAppRootKey</param-name>
