--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.jasig.portlet</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>1.0.1-SNAPSHOT</version>
+    <version>1.1.0-RC1</version>
     
     <name>Web Proxy Portlet</name>
     <description>Provides web site content inclusion via a JSR-168 portlet.</description>
@@ -22,9 +22,9 @@
         <system>${jasig-issues-system}</system>
     </issueManagement>
     <scm>
-        <connection>${jasig-scm-base-mvn}/portlets/WebproxyPortlet/trunk/</connection>
-        <developerConnection>${jasig-scm-base-mvn}/portlets/WebproxyPortlet/trunk/</developerConnection>
-        <url>${jasig-scm-view-base}/portlets/WebproxyPortlet</url>
+        <connection>scm:svn:https://www.ja-sig.org/svn/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.0-RC1</connection>
+        <developerConnection>scm:svn:https://www.ja-sig.org/svn/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.0-RC1</developerConnection>
+        <url>http://developer.jasig.org/source/browse/jasigsvn/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.0-RC1</url>
     </scm>
 
     <repositories>
@@ -44,6 +44,12 @@
         <dependencies>
         
         <dependency>
+            <groupId>org.jasig</groupId>
+            <artifactId>AjaxPortletSupport</artifactId>
+            <version>1.0.6</version>
+        </dependency>
+        
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-jcl</artifactId>
             <version>1.5.10</version>
@@ -52,6 +58,13 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.5.10</version>
+        </dependency>
+
+        
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.1</version>
         </dependency>
 
         
@@ -135,7 +148,7 @@
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
-            <version>4.0-beta2</version>
+            <version>4.0.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>commons-logging</groupId>
@@ -252,7 +265,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.4</version>
+            <version>2.5</version>
         </dependency>
         
         <dependency>
@@ -315,6 +328,11 @@
         <!--
          | Run Time Dependencies
          +-->
+         <dependency>
+            <groupId>org.jasig</groupId>
+            <artifactId>AjaxPortletSupport</artifactId>
+        </dependency>
+        
         <dependency>
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
@@ -328,6 +346,11 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc-portlet</artifactId>
+        </dependency>
+        
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
         </dependency>
         
         <dependency>
