--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,9 +9,13 @@
 # following line after everything is running.  This will turn off
 # the tons of debug messages, and leave only INFO, WARN, ERROR, etc.
 #
-log4j.rootCategory=DEBUG, R
+log4j.rootCategory=INFO, R
 log4j.category.edu.wisc.my.webproxy=DEBUG, R
 log4j.additivity.edu.wisc.my.webproxy=false
+log4j.logger.org.apache.http.headers=DEBUG, R
+log4j.additivity.org.apache.http.headers=false
+log4j.logger.org.hibernate=TRACE, R
+log4j.additivity.org.hibernate=false
 
 ###########################################################################
 # Setup a rolling file appender
