--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.jasig.portlet</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>1.1.0-RC2</version>
+    <version>1.1.0-SNAPSHOT</version>
     
     <name>Web Proxy Portlet</name>
     <description>Provides web site content inclusion via a JSR-168 portlet.</description>
@@ -22,9 +22,9 @@
         <system>${jasig-issues-system}</system>
     </issueManagement>
     <scm>
-        <connection>scm:svn:https://www.ja-sig.org/svn/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.0-RC2</connection>
-        <developerConnection>scm:svn:https://www.ja-sig.org/svn/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.0-RC2</developerConnection>
-        <url>http://developer.jasig.org/source/browse/jasigsvn/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.0-RC2</url>
+        <connection>scm:svn:https://www.ja-sig.org/svn/portlets/WebproxyPortlet/trunk/</connection>
+        <developerConnection>scm:svn:https://www.ja-sig.org/svn/portlets/WebproxyPortlet/trunk/</developerConnection>
+        <url>http://developer.jasig.org/source/browse/jasigsvn/portlets/WebproxyPortlet</url>
     </scm>
 
     <repositories>
