[maven-release-plugin] prepare release WebProxyPortlet-1.1.0-RC5
git-svn-id: https://source.jasig.org/portlets/WebproxyPortlet/trunk@20978 f5dbab47-78f9-eb45-b975-e544023573eb

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.jasig.portlet</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>1.1.0-SNAPSHOT</version>
+    <version>1.1.0-RC5</version>
     
     <name>Web Proxy Portlet</name>
     <description>Provides web site content inclusion via a JSR-168 portlet.</description>
@@ -22,9 +22,9 @@
         <system>${jasig-issues-system}</system>
     </issueManagement>
     <scm>
-        <connection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/trunk/</connection>
-        <developerConnection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/trunk/</developerConnection>
-        <url>https://developer.jasig.org/source/browse/jasigsvn/portlets/WebproxyPortlet</url>
+        <connection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.0-RC5</connection>
+        <developerConnection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.0-RC5</developerConnection>
+        <url>https://developer.jasig.org/source/browse/jasigsvn/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.0-RC5</url>
     </scm>
 
     <repositories>
