--- a/pom.xml
+++ b/pom.xml
@@ -193,7 +193,7 @@
         <dependency>
             <groupId>org.jasig.service</groupId>
             <artifactId>delegated-saml-authentication</artifactId>
-            <version>1.1.0-RC1</version>
+            <version>1.1.0</version>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
