Add an empty spring context file that can be used for overriding beans in the main context definition.
git-svn-id: https://source.jasig.org/portlets/WebproxyPortlet/trunk@21016 f5dbab47-78f9-eb45-b975-e544023573eb

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,11 @@
         <param-value>webproxy.root</param-value>
     </context-param>
     
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>WEB-INF/applicationContext.xml,WEB-INF/applicationContextOverrides.xml</param-value>
+    </context-param>
+    
     <listener>
         <listener-class>org.springframework.web.util.WebAppRootListener</listener-class>
     </listener>
