--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,8 @@
 
     <parent>
         <groupId>org.jasig.parent</groupId>
-        <artifactId>jasig-parent</artifactId>        <version>22</version>
+        <artifactId>jasig-parent</artifactId>
+        <version>30</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -23,16 +24,8 @@
     <scm>
         <connection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/trunk/</connection>
         <developerConnection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/trunk/</developerConnection>
-        <url>https://developer.jasig.org/source/browse/jasigsvn/portlets/WebproxyPortlet</url>
+        <url>https://developer.jasig.org/source/browse/jasigsvn/portlets/WebproxyPortlet/trunk/</url>
     </scm>
-
-    <repositories>
-        <repository>
-            <id>sonatype-release</id>
-            <name>Sonatype Releases Repo</name>
-            <url>http://oss.sonatype.org/content/repositories/sourceforge-releases</url>
-        </repository>
-    </repositories>
     
     <dependencyManagement>
         <dependencies>
@@ -54,7 +47,7 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.4</version>
+            <version>2.0.1</version>
         </dependency>
         <dependency>
             <groupId>commons-lang</groupId>
@@ -104,7 +97,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.1</version>
+            <version>4.8.2</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
@@ -114,7 +107,7 @@
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache-core</artifactId>
-            <version>2.2.0</version>
+            <version>2.3.1</version>
         </dependency>
         <dependency>
             <groupId>net.sourceforge.nekohtml</groupId>
@@ -458,7 +451,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>${pom.artifactId}</finalName>
+        <finalName>${project.artifactId}</finalName>
     
         <plugins>
             <plugin>
@@ -478,10 +471,6 @@
                 <version>2.4.2</version>
             </plugin>
             <plugin>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>2.1</version>
-            </plugin>
-            <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.5</version>
             </plugin>
@@ -492,42 +481,14 @@
                     <attachClasses>true</attachClasses>
                 </configuration>
             </plugin>
+            <plugin>
+              <groupId>org.jasig.maven</groupId>
+              <artifactId>maven-notice-plugin</artifactId>
+              <configuration>
+                <noticeTemplate>NOTICE.template</noticeTemplate>
+              </configuration>
+            </plugin>
+
         </plugins>
     </build>
-    <reporting>
-        <plugins>
-            <plugin>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.6.1</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.1</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <targetJdk>1.5</targetJdk>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.5</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.3.1</version>
-                <configuration>
-                    <includeTests>true</includeTests>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.4</version>
-            </plugin>
-        </plugins>
-    </reporting>
 </project>
