WPP-43 Add WebUtils.SESSION_MUTEX_ATTRIBUTE to the http session and portlet session
git-svn-id: https://source.jasig.org/portlets/WebproxyPortlet/trunk@22904 f5dbab47-78f9-eb45-b975-e544023573eb

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,10 @@
     </context-param>
     
     <listener>
+        <listener-class>org.springframework.web.util.HttpSessionMutexListener</listener-class>
+    </listener>
+    
+    <listener>
         <listener-class>org.springframework.web.util.WebAppRootListener</listener-class>
     </listener>
     
