--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.jasig.portlet</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>1.1.6-SNAPSHOT</version>
+    <version>1.1.6</version>
     
     <name>Web Proxy Portlet</name>
     <description>Provides web site content inclusion via a JSR-168 portlet.</description>
@@ -22,9 +22,9 @@
         <system>${jasig-issues-system}</system>
     </issueManagement>
     <scm>
-        <connection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/trunk/</connection>
-        <developerConnection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/trunk/</developerConnection>
-        <url>https://developer.jasig.org/source/browse/jasigsvn/portlets/WebproxyPortlet/trunk/</url>
+        <connection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.6</connection>
+        <developerConnection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.6</developerConnection>
+        <url>https://developer.jasig.org/source/browse/jasigsvn/portlets/WebproxyPortlet/tags/WebProxyPortlet-1.1.6</url>
     </scm>
     
     <dependencyManagement>
