--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.jasig.parent</groupId>
         <artifactId>jasig-parent</artifactId>
-        <version>30</version>
+        <version>33</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -22,10 +22,17 @@
         <system>${jasig-issues-system}</system>
     </issueManagement>
     <scm>
-        <connection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/trunk/</connection>
-        <developerConnection>scm:svn:https://source.jasig.org/portlets/WebproxyPortlet/trunk/</developerConnection>
-        <url>https://developer.jasig.org/source/browse/jasigsvn/portlets/WebproxyPortlet/trunk/</url>
+        <connection>scm:git:git://github.com/Jasig/WebproxyPortlet.git</connection>
+        <developerConnection>scm:git:git@github.com:Jasig/WebproxyPortlet.git</developerConnection>
+        <url>https://github.com/Jasig/WebproxyPortlet</url>
     </scm>
+    
+    <repositories>
+        <repository>
+            <id>java.net repository</id>
+            <url>http://download.java.net/maven/2</url>
+        </repository>
+    </repositories>
     
     <dependencyManagement>
         <dependencies>
@@ -455,8 +462,21 @@
     
         <plugins>
             <plugin>
+                <groupId>com.mycila.maven-license-plugin</groupId>
+                <artifactId>maven-license-plugin</artifactId>
+                <configuration>
+                    <aggregate>true</aggregate>
+                    <excludes>
+                        <exclude>**/NOTICE</exclude>
+                        <exclude>README</exclude>
+                        <exclude>LICENSE</exclude>
+                        <exclude>NOTICE.template</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.1</version>
+                <version>2.3.2</version>
                 <configuration>
                     <source>1.5</source>
                     <target>1.5</target>
@@ -464,19 +484,25 @@
             </plugin>
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>2.0</version>
+                <version>2.2.1</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <localCheckout>true</localCheckout>
+                    <tagNameFormat>uportal-@{project.version}</tagNameFormat>
+                    <pushChanges>false</pushChanges>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
-                <version>2.4.2</version>
-            </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.5</version>
             </plugin>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.12</version>
+            </plugin>
+            <plugin>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>2.1-beta-1</version>
+                <version>2.2</version>
                 <configuration>
                     <attachClasses>true</attachClasses>
                 </configuration>
