--- a/pom.xml
+++ b/pom.xml
@@ -471,6 +471,7 @@
                         <exclude>README</exclude>
                         <exclude>LICENSE</exclude>
                         <exclude>NOTICE.template</exclude>
+                        <exclude>release.properties</exclude>
                     </excludes>
                 </configuration>
             </plugin>
