Adding additional git and mvn release ignores

--- a/pom.xml
+++ b/pom.xml
@@ -472,6 +472,7 @@
                         <exclude>LICENSE</exclude>
                         <exclude>NOTICE.template</exclude>
                         <exclude>release.properties</exclude>
+                        <excluse>.gitignore</excluse>
                     </excludes>
                 </configuration>
             </plugin>
