Updating mvn release configuration

--- a/pom.xml
+++ b/pom.xml
@@ -490,7 +490,7 @@
                 <configuration>
                     <autoVersionSubmodules>true</autoVersionSubmodules>
                     <localCheckout>true</localCheckout>
-                    <tagNameFormat>uportal-@{project.version}</tagNameFormat>
+                    <tagNameFormat>WebProxyPortlet-@{project.version}</tagNameFormat>
                     <pushChanges>false</pushChanges>
                 </configuration>
             </plugin>
