--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -17,18 +17,49 @@
 # under the License.
 #
 
-#Change this out to reflect your application name, WebProxyPortlet is a starting pt.
-# NOTE: if you are looking for the test-log4j.properties look in the 
-# src/test/resources directory.  That controls all logging during
-# the mvn test cycle.  The log4j.properties file (this file) is deployed via
-# your war archive.
-log4j.rootLogger = WARN, WebProxyPortlet
-log4j.appender.WebProxyPortlet = org.apache.log4j.DailyRollingFileAppender
-#Change this value to your tomcat home
-log4j.appender.WebProxyPortlet.File = ${catalina.base}/logs/WebProxyPortlet.log
-log4j.appender.WebProxyPortlet.Append = true
-log4j.appender.WebProxyPortlet.layout = org.apache.log4j.PatternLayout
-log4j.appender.WebProxyPortlet.layout.ConversionPattern = %d{ABSOLUTE} [%t] %-5p %-30.30c{2} %x - %m %n
+log4j.rootCategory=WARN, R
+log4j.category.org.jasig.portlet.proxy=TRACE, R
+log4j.additivity.org.jasig.portlet.proxy=false
 
-# Turn on Debug for your package space by default. 
-log4j.logger.org.jasig.portlet.newwebproxy=DEBUG
+#Silence an erroneous WARN level log message from Hibernate
+log4j.category.org.hibernate.engine.loading.LoadContexts=ERROR, R
+log4j.additivity.org.hibernate.engine.loading.LoadContexts=ERROR, R
+
+
+###########################################################################
+# Setup a rolling file appender
+#
+log4j.appender.R=org.apache.log4j.RollingFileAppender
+
+###########################################################################
+# Uncomment the next line to have messages go to stdout (System.out)
+#
+#log4j.appender.R=org.apache.log4j.ConsoleAppender
+
+# This is the path to the log file. It's usually set to something like
+# c:\\portal\\logs\\WebProxyPortlet.log or /opt/portal/logs/WebProxyPortlet.log
+# Relative file names will be relative to the directory specified by the
+# user.dir System property.
+# WARNING: ALL SLASHES MUST BE FORWARD SLASHES OR ESCAPED BACK SLASHES!!!
+#
+log4j.appender.R.File=${catalina.base}/logs/WebProxyPortlet.log
+
+# This tells log4j what type of encoding to use
+#
+log4j.appender.R.Encoding=UTF-8
+
+# This tells log4j to use PatternLayout for log file formatting
+#
+log4j.appender.R.layout=org.apache.log4j.PatternLayout
+
+# Pattern used during debugging
+#
+#log4j.appender.R.layout.ConversionPattern=%5p [%t] %d{MMM/dd HH:mm:ss,SSS} %c{2}.[%x] (%F:%L) - %m%n
+
+# Pattern that should be used when speed is important (it doesn't provide location info)
+#
+log4j.appender.R.layout.ConversionPattern=%5p [%t] %d{MMM/dd HH:mm:ss,SSS} %c{2}.[%x] - %m%n
+
+# Pattern for performing hourly log rolling, defaults to '.'yyyy-MM-dd
+#
+#log4j.appender.R.DatePattern='.'yyyy-MM-dd-HH
