--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 
     <!-- Dependency Version Properties -->
     <properties>
+        <cas.version>3.2.1</cas.version>
         <jackson.version>1.9.4</jackson.version>
         <jstl.version>1.1.2</jstl.version>
         <log4j.version>1.2.14</log4j.version>
@@ -91,6 +92,11 @@
                 <groupId>org.codehaus.jackson</groupId>
                 <artifactId>jackson-mapper-asl</artifactId>
                 <version>${jackson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jasig.cas</groupId>
+                <artifactId>cas-client-core</artifactId>
+                <version>${cas.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.jasig.resourceserver</groupId>
