--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>org.jasig.portlet.proxy</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0-M1-SNAPSHOT</version>
     <name>WebProxyPortlet</name>
     <description>
         Collection of portlets for proxying external content
@@ -223,6 +223,9 @@
                 <configuration>
                     <aggregate>true</aggregate>
                     <excludes>
+                        <exclude>.gitignore</exclude>
+                        <exclude>src/test/resources/test.json</exclude>
+                        <exclude>src/main/resources/test-content/sample.json</exclude>
                         <exclude>target/**</exclude>
                         <exclude>pom.xml.*</exclude>
                         <exclude>release.properties</exclude>
@@ -231,6 +234,16 @@
                         <exclude>NOTICE.template</exclude>
                         <exclude>bin/**</exclude>
                     </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.2.1</version>
+                <configuration>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                    <localCheckout>true</localCheckout>
+                    <tagNameFormat>WebProxyPortlet-@{project.version}</tagNameFormat>
+                    <pushChanges>false</pushChanges>
                 </configuration>
             </plugin>
             <plugin>
