--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <parent>
         <groupId>org.jasig.parent</groupId>
@@ -11,7 +10,7 @@
     <groupId>org.jasig.portlet.proxy</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>2.0-M1-SNAPSHOT</version>
+    <version>2.0-M1</version>
     <name>WebProxyPortlet</name>
     <description>
         Collection of portlets for proxying external content
