--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>org.jasig.portlet.proxy</groupId>
     <artifactId>WebProxyPortlet</artifactId>
     <packaging>war</packaging>
-    <version>2.0-M1</version>
+    <version>2.0-M2-SNAPSHOT</version>
     <name>WebProxyPortlet</name>
     <description>
         Collection of portlets for proxying external content
