WPP-55 Adding CAS support, javadocs, and license headers

--- a/src/main/resources/configuration.properties
+++ b/src/main/resources/configuration.properties
@@ -19,3 +19,8 @@
 
 #Set the viewResolver bean, cache property in applicationContext.xml
 viewResCache=false
+
+cas.server.base.url=http://localhost:8080/cas
+portal.server.base.url=http://localhost:8080
+portlet.context=WebProxyPortlet
+portal.proxy.receptor.path=uPortal/CasProxyServlet
