--- a/pom.xml
+++ b/pom.xml
@@ -93,7 +93,7 @@
                 <version>${jackson.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.jasig.cas</groupId>
+                <groupId>org.jasig.cas.client</groupId>
                 <artifactId>cas-client-core</artifactId>
                 <version>${cas.version}</version>
             </dependency>
@@ -179,6 +179,10 @@
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jasig.cas.client</groupId>
+            <artifactId>cas-client-core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.jasig.resourceserver</groupId>
