WPP-56:  Add missing ehcache.xml and a couple methods on ClasspathResourceContentService

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -18,7 +18,7 @@
 #
 
 log4j.rootCategory=WARN, R
-log4j.category.org.jasig.portlet.proxy=TRACE, R
+log4j.category.org.jasig.portlet.proxy=INFO, R
 log4j.additivity.org.jasig.portlet.proxy=false
 
 #Silence an erroneous WARN level log message from Hibernate
