--- a/pom.xml
+++ b/pom.xml
@@ -252,6 +252,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.13</version>
                 <configuration>
                     <systemproperties>
                         <property>
@@ -346,10 +347,10 @@
                         <artifactId>maven-uportal-plugin</artifactId>
                         <groupId>org.jasig.portal</groupId>
                         <configuration>
-                            <contextName>${pom.artifactId}</contextName>
-                            <artifactId>${pom.artifactId}</artifactId>
-                            <artifactGroupId>${pom.groupId}</artifactGroupId>
-                            <artifactVersion>${pom.version}</artifactVersion>
+                            <contextName>${project.artifactId}</contextName>
+                            <artifactId>${project.artifactId}</artifactId>
+                            <artifactGroupId>${project.groupId}</artifactGroupId>
+                            <artifactVersion>${project.version}</artifactVersion>
                             <artifactClassifier>localdev</artifactClassifier>
                             <removeExistingDirectories>true</removeExistingDirectories>
                             <extractWars>true</extractWars>
